--- a/CodetestPackage/main/default/lwc/mainPage/mainPage.html
+++ b/CodetestPackage/main/default/lwc/mainPage/mainPage.html
@@ -1,8 +1,4 @@
 <template>
-    <template if:false={userLoginOK} >
-        <c-login-page></c-login-page>
-    </template>
-    <template if:true={userLoginOK} onuservalidated={handleValidation}>
-        <h1>Hello Test Code</h1>
-    </template>
+    <c-login-page if:false={userLoginOK}></c-login-page>
+    <c-test-center if:true={userLoginOK} ></c-test-center>
 </template>
