login method change

--- a/CodetestPackage/main/default/lwc/answerContainer/answerContainer.html
+++ b/CodetestPackage/main/default/lwc/answerContainer/answerContainer.html
@@ -3,9 +3,9 @@
         <div class="answerContainer">
             <c-answer-box method={question.placeholder}></c-answer-box>
         </div>
-        <div class="resultContainer">
+        <!-- <div class="resultContainer">
             <c-result-box></c-result-box>
-        </div>
+        </div> -->
         <div class="buttonContainer">
             <c-action-buttons onsubmitresponse={showModal} onruncode={handleCodeRun}></c-action-buttons>
         </div>
