database method change

--- a/CodetestPackage/main/default/lwc/questionExplorer/questionExplorer.html
+++ b/CodetestPackage/main/default/lwc/questionExplorer/questionExplorer.html
@@ -1,7 +1,7 @@
 <template>
     <template if:true={questionSet}>
         <template for:each={questionSet} for:item="question">
-            <div class="card-container" key={question.url}>
+            <div class="card-container" key={question.Id}>
                 <c-question-card  question-set={question} onsolvequestionset={handleSelect}></c-question-card>
             </div>
         </template>
