--- a/CodetestPackage/main/default/lwc/answerContainer/answerContainer.html
+++ b/CodetestPackage/main/default/lwc/answerContainer/answerContainer.html
@@ -1,7 +1,7 @@
 <template>
     <div class="mainContainer" if:true={question}>
         <div class="answerContainer">
-            <c-answer-box method={question.placeholder}></c-answer-box>
+            <c-answer-box method={question.PlaceHolder__c}></c-answer-box>
         </div>
         <!-- <div class="resultContainer">
             <c-result-box></c-result-box>
