--- a/CodetestPackage/main/default/lwc/questionCard/questionCard.html
+++ b/CodetestPackage/main/default/lwc/questionCard/questionCard.html
@@ -1,6 +1,6 @@
 <template>
     <template if:true={questionSet}>
-    <lightning-card title={questionSet.name}>
+    <lightning-card title={questionSet.Name}>
         <lightning-button label="Solve" variant="brand" slot="actions" onclick={handleSolve}></lightning-button>
     </lightning-card>
     </template>
