--- a/CodetestPackage/main/default/lwc/questionContainer/questionContainer.html
+++ b/CodetestPackage/main/default/lwc/questionContainer/questionContainer.html
@@ -2,10 +2,10 @@
     <div class='container slds-card fullheight'>
         <div class="fullheight slds-box">
             <div class = "slds-border_bottom heading">
-                <h1 class="slds-text-heading_small slds-align_absolute-center">{question.name}</h1>
+                <h1 class="slds-text-heading_small slds-align_absolute-center">{question.Name}</h1>
             </div>
             <div class = "text">
-                <p class="slds-text-body_regular">{question.prompt}</p>
+                <p class="slds-text-body_regular">{question.Prompt__c}</p>
             </div> 
         </div>
     </div>
