--- a/CodetestPackage/main/default/lwc/loginPage/loginPage.html
+++ b/CodetestPackage/main/default/lwc/loginPage/loginPage.html
@@ -1,28 +1,22 @@
 <template>
-    <div style="background-color: white; width:100%">
-        <div style="height: 40px; background-color:#3264a8"></div>
+    <div class="login-page-general">
+        <div class="login-decration-bar"></div>
         <br>
         <div class="center" style="width: 500px; padding: 5px; margin-right:auto;margin-left: auto; border: 1px solid #3264a8">
-          <!-- <div class="slds-m-around_medium slds-align_absolute-center">
-          <img class="logo" src={candidateLogo} alt={candidateCompanylogo} />  
-          </div> -->
           <template if:true={showError}> 
-              <div style="color:red" class="slds-m-around_medium">Error: {errorText}</div>
+              <div class="slds-m-around_medium login-error-text" >Error: {errorText}</div>
             </template>
-            <p style="text-align:center">Get Your Authorization Code <a href={site} target="_blank">here</a></p>
             <lightning-input class="slds-m-around_medium" type="text" label="User name" onchange={usernameChange} placeholder="Enter Username Here"></lightning-input>
             <lightning-input class="slds-m-around_medium" type="text" label="Authorization Code" onchange={authCodeChange} placeholder="Enter Code Here"></lightning-input>
             <lightning-button label="Authenticate" onclick={handleLogin} class="slds-m-around_medium slds-align_absolute-center"></lightning-button>
     
             <ol class="slds-list_ordered" style="color: #3264a8;">Steps to follow for Login
-              <li>Click on the Link to redirect to the Code Assess Website.</li>
-              <li>Click on Register and Login.</li>
-              <li>Copy the authorization code.</li>
+              <li>Input your username</li>
               <li>Enter the authorization code.</li>
               <li>Click Authenticate.</li>
               </ol>
         </div>
         <br>
-        <div style="height:40px; background-color:#3264a8"></div>
+        <div class="login-decration-bar"></div>
       </div>
 </template>
