--- a/CodetestPackage/main/default/lwc/testCenter/testCenter.html
+++ b/CodetestPackage/main/default/lwc/testCenter/testCenter.html
@@ -1,6 +1,6 @@
 <template>
     <div class="container fullheight">
-        <c-question-explorer if:false={questionList} onquestionselect = {handleSelect}></c-question-explorer>
+        <c-question-explorer if:false={questionList} onquestionselect = {handleSelect} username={username}></c-question-explorer>
         <c-test-environment if:true={questionList} question-list = {questionList} onfinishset={handleSetFinish}></c-test-environment>
     </div>
 </template>
